welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
if !estSurBiscuit(){
	avance();
}else{
	porteBiscuit();
	seRetourner();
	avance();
	avance();
	seRetourner();
}
